Took some more photos Identifing some trees and uploading photos

--- a/aRticles.bib
+++ b/aRticles.bib
@@ -1,4 +1,4 @@
-@book{predny.2005, 
+@book{galax, 
   title={Galax (Galax Urceolata): An Annotated Bibliography}, 
   url={https://www.srs.fs.usda.gov/pubs/gtr/gtr_srs087.pdf}, 
   abstractNote={Galax (Galax urceolata) is an evergreen groundcover harvested for use in the floral industry. The plants durable, shiny green leaves turn red in the fall and are popular background foliage in floral arrangements. People living in the mountains of North Carolina and other rural Appalachian locations have harvested (pulled) galax to supplement their incomes since before the 20th century; however, over the last decade, Hispanic laborers have largely displaced local harvesters. Today, more than 90 percent of the harvesters are of Hispanic origin. An experienced harvester can pull approximately 5,000 leaves a day; the value of this amount can range from $20 to $120. Prices vary depending on the season, the size and color of the leaves, and market demand. Industry concern for the availability or sustainability of galax has prompted the USDA Forest Service to restrict the harvest season. Since 2001, no harvesting is allowed from May 1 through June 15 when new leaves are emerging. The USDA Forest Service and the National Park Service are both conducting research to determine sustainable harvest levels.}, 
@@ -9,17 +9,27 @@
   language={en} 
   }
   
-@misc{uniflora, 
-  url={https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_uniflora.shtml}, 
-  abstractNote={Indian pipe is a perennial wildflower with a wide geographic distribution throughout the United States, from Maine to California and from Florida to Alaska. It is absent from the southwest, intermountain west and the central Rocky mountains. However, Indian Pipe is not a commonly encountered wildflower.}, 
-  journal={U.S. Forest Service},
-  author={USFS}
-  }
+
   
 @misc{hypopitys, 
   url={https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_hypopitys.shtml}, abstractNote={Pinesap is an herbaceous perennial wildflower with a wide geographic distribution throughout the United States and Canada. However, Pinesap is a rarely encountered wildflower.}, 
   journal={U.S. Forest Service},
   author={USFS}
   }
+  
+@misc{rigida, 
+  title={Pinus rigida}, 
+  url={https://www.fs.fed.us/database/feis/plants/tree/pinrig/all.html#Cone%20survival%20and%20seedling%20establishment:}, 
+  journal={Fire Effects Information System}, 
+  author={Gucker, Corey L.}, 
+  year={2007} 
+  }
 
 
+
+@misc{uniflora, 
+  url={https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_uniflora.shtml}, 
+  abstractNote={Indian pipe is a perennial wildflower with a wide geographic distribution throughout the United States, from Maine to California and from Florida to Alaska. It is absent from the southwest, intermountain west and the central Rocky mountains. However, Indian Pipe is not a commonly encountered wildflower.}, 
+  journal={U.S. Forest Service},
+  author={USFS}
+  }
