--- a/dixon.bib
+++ b/dixon.bib
@@ -20,3 +20,40 @@
   note = {R package version 0.2.3},
   url = {https://cran.r-project.org/package=tinylabels},
 }
+@Manual{R-gridBase,
+  title = {gridBase: Integration of base and grid graphics},
+  author = {Paul Murrell},
+  year = {2014},
+  note = {R package version 0.4-7},
+  url = {https://CRAN.R-project.org/package=gridBase},
+}
+@Manual{R-gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
+}
+@Manual{R-png,
+  title = {png: Read and write PNG images},
+  author = {Simon Urbanek},
+  year = {2013},
+  note = {R package version 0.1-7},
+  url = {https://CRAN.R-project.org/package=png},
+}
+@Manual{R-packrat,
+  title = {packrat: A Dependency Management System for Projects and their R Package
+Dependencies},
+  author = {Kevin Ushey and Jonathan McPherson and Joe Cheng and Aron Atkins and JJ Allaire},
+  year = {2022},
+  note = {R package version 0.8.0},
+  url = {https://CRAN.R-project.org/package=packrat},
+}
+@Manual{R-rsconnect,
+  title = {rsconnect: Deployment Interface for R Markdown Documents and Shiny
+Applications},
+  author = {Aron Atkins and Jonathan McPherson and JJ Allaire},
+  year = {2022},
+  note = {R package version 0.8.26},
+  url = {https://CRAN.R-project.org/package=rsconnect},
+}
