--- a/aRticles.bib
+++ b/aRticles.bib
@@ -9,6 +9,10 @@
   language={en} 
   }
   
+@misc{gaylussacia,
+  url={https://plants.ces.ncsu.edu/plants/gaylussacia-baccata/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox} 
+  }
 
   
 @misc{hypopitys, 
