Editted the photos to all be 4:3 added info for two more spp Got bored

--- a/aRticles.bib
+++ b/aRticles.bib
@@ -1,3 +1,42 @@
+@misc{ACF, 
+  title={Saving the American Chestnut Tree | The American Chestnut Foundation}, 
+  url={https://acf.org/}, 
+  author={ACF}, 
+  year={2016}, 
+  month={Apr} 
+  }
+
+
+@misc{acer, 
+  title={Armstrong Freeman’s Maple - Acer x freemanii “Armstrong”}, 
+  url={https://www.cirrusimage.com/tree_maple_armstrong_freeman/}, 
+  abstractNote={Armstrong Freeman’s Maple Family Aceraceae Freeman maples are known for their fast growth, tolerance of poor. soil, and open form. Custom Search Acer x freemanii “Armstrong” Armstrong Freeman’s maple is fast-growing to 60-70 feet with a spread of perhaps 20-25 feet, with a tall, narrow habit. Grows best in full sun on well-drained soil, but […]}, 
+  journal={North American Insects & Spiders}, 
+  author={Red Planet}, 
+  year={2018}, 
+  month={Sep}, 
+  language={en-US} 
+  }
+  
+@misc{acer2, 
+  url={https://en.wikipedia.org/w/index.php?title=Acer_%C3%97_freemanii&oldid=1049718728}, 
+  abstractNote={Acer × freemanii, Freeman maple or Freeman’s maple, is a naturally occurring hybrid maple that is the result of a cross between Acer rubrum (red maple) and Acer saccharinum (silver maple). Wild specimens are found in eastern North America where the parent species overlap. The species is named for Oliver M. Freeman of the U.S. National Arboretum who hybridized A. rubrum with A. saccharinum in 1933. The fall foliage is a striking orange-red. It has many commercially available cultivars and is frequently used as a street tree.}, 
+  note={Page Version ID: 1049718728}, 
+  journal={Wikipedia}, 
+  year={2021}, 
+  month={Oct}, 
+  language={en} 
+  }
+
+@misc{castenea,
+  type={Database},
+  title={Castanea dentata (American Chestnut, Chestnut)}, 
+  url={https://plants.ces.ncsu.edu/plants/castanea-dentata/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
+  }
+
+
 @book{galax, 
   title={Galax (Galax Urceolata): An Annotated Bibliography}, 
   url={https://www.srs.fs.usda.gov/pubs/gtr/gtr_srs087.pdf}, 
@@ -20,6 +59,48 @@
   journal={U.S. Forest Service},
   author={USFS}
   }
+
+@misc{iris, 
+  type={Database}, 
+  title={Iris sanguinea (Japanese Iris, Siberian Iris)}, 
+  url={https://plants.ces.ncsu.edu/plants/iris-sanguinea/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
+  }
+
+
+@misc{iris2, 
+  type={Database}, 
+  title={Iris sanguinea Blood iris}, 
+  url={https://pfaf.org/user/Plant.aspx?LatinName=Iris+sanguinea}, 
+  journal={PFAF Plant Database}, 
+  author={PFAF} 
+  }
+
+@misc{kal, 
+  title={Wildflowers 101: Mountain Laurel and Rhododendron}, 
+  url={https://www.smokiesinformation.org/news/wildflowers-101-mountain-laurel-and-rhododendron.html}, 
+  author={Figart, Frances}, 
+  year={2021}, 
+  month={Jun} 
+  }
+
+@misc{kal2, 
+  type={Database}, 
+  title={Kalmia latifolia (Calico Bush, Ivy Bush, Laurel, Mountain Ivy, Mountain Laurel, Sheepkill, Spoonwood)}, 
+  url={https://plants.ces.ncsu.edu/plants/kalmia-latifolia/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
+  }
+
+@misc{kal3, 
+  title={Kalmia latifolia (Mountain laurel)}, 
+  url={https://www.wildflower.org/plants/result.php?id_plant=KALA}, journal={Native Plants of North America}, 
+  author={TWC}, 
+  year={2017}, 
+  month={Jul} 
+  }
+
   
 @misc{rigida, 
   title={Pinus rigida}, 
